--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon ./server/index.js",
-    "start": "node ./server/index.js"
+    "start": "node ./src/index.js"
   },
   "keywords": [],
   "author": "",
